wrote the css part

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a href="#">My<span>Website</span></a>
+            <a class="logo" href="#">My<span>Website</span></a>
 
             <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open Navigation">
 
@@ -38,7 +38,7 @@
 
             <div class="hero-cta">
                 <a href="#" class="primary-cta">Try it here for free</a>
-                <a href="#" class="watch-video-cta">Try it here for free</a>
+                <a href="#" class="watch-video-cta">Watch a video</a>
                     <img src="images/camera.svg" alt="watch-video">
 
             </div>
@@ -51,7 +51,7 @@
 
     <section class="features-selection">
         <div class="container">
-            <ul>
+            <ul class="features-list">
                 <li>Tasks</li>
                 <li>Task Reminders</li>
                 <li>Confetti upon task completion</li>
