--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Open Navigation">
 
-            <nav>
+            <nav class="menu-btn">
                 <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="exit-menu">
 
                 <ul class="primary-nav">
@@ -108,5 +108,21 @@
             
         </div>
     </section>
+
+    <script>
+
+        const mobileBtn = document.getElementById('mobile-cta')
+            nav = document.querySelector('nav');
+            mobileBtnExit = document.getElementById('mobile-exit');
+
+        mobileBtn.addEventListener('click', () => {
+            nav.classList.add('menu-btn');
+        })
+
+        mobileBtnExit.addEventListener('click', () => {
+            nav.classList.remove('menu-btn');
+        })
+    </script>
+
 </body>
 </html>
