made the css responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <ul class="secondary-nav">
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">GoPremium</a></li>
+                    <li class="go-premium-cta"><a href="#">GoPremium</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +39,7 @@
             <div class="hero-cta">
                 <a href="#" class="primary-cta">Try it here for free</a>
                 <a href="#" class="watch-video-cta">Watch a video</a>
-                    <img src="images/camera.svg" alt="watch-video">
+                    <img src="images/camera.svg" class="camera-img" alt="watch-video">
 
             </div>
             </div>
